Wrap some POJOs in simple web beans to streamline validation

--- a/src/strongerweb/messages/messages.properties
+++ b/src/strongerweb/messages/messages.properties
@@ -1,2 +1,2 @@
 AValidWeight.humanWrapper.weight = This is not a valid weight
-AValidSex.humanWrapper.sex = Expecting "male" or "female" value.
+AValidSex.humanWrapper.sex = Expecting "man" or "woman"
